<resources>
    <string name="app_name">AppPatitas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valnavvoluntario">Voluntario</string>
    <string name="valnavlistmascota">Mascotas Perdidas</string>
    <string name="valetusuario">Ingrese su usuario</string>
    <string name="valetpassword">Ingrese su password</string>
    <string name="valchkrecordar">Recordar Información</string>
    <string name="valbtnlogin">Iniciar Sesión</string>
    <string name="valbtnregistrar">Registrarme</string>
    <string name="valtituloregistro">REGISTRARME</string>
    <string name="valetnombrereg">Ingrese su nombre</string>
    <string name="valetapellidoreg">Ingrese su apellido</string>
    <string name="valetemailreg">Ingrese su email</string>
    <string name="valetcelularreg">Ingrese su número de celular</string>
    <string name="valetusuarioreg">Ingrese su usuario</string>
    <string name="valetpasswordreg">Ingrese su password</string>
    <string name="valbtnregistrarme">REGISTRAR USUARIO</string>
    <string name="valbtnirlogin">VOLVER A LOGIN</string>
    <string name="valtvtituvoluntario">ÚNETE A NUESTRO EQUIPO!</string>
    <string name="valtvtextoterminos">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="valchkacepta">Acepta los términos para ser voluntario</string>
    <string name="valbtnregvoluntario">REGISTRARME COMO VOLUNTARIO</string>
    <string name="valesvoluntario">GRACIAS POR SER VOLUNTARIO</string>
    <string name="valerrorterminos">Acepte los términos para ser voluntario.</string>
    <string name="action_salir">Salir</string>

</resources>